[gd_scene load_steps=7 format=3 uid="uid://w8v2eba32ld6"]

[ext_resource type="Script" path="res://Scene/vegetable/vegetable.gd" id="1_vjb0w"]
[ext_resource type="Texture2D" uid="uid://bqdq5nyvusqfk" path="res://Assets/Legume_sprite/sproot.png" id="2_r3qm1"]
[ext_resource type="Texture2D" uid="uid://ppqnttw8netc" path="res://Assets/icon/circularProgressBarEmpty.png" id="3_y7d0n"]
[ext_resource type="Texture2D" uid="uid://chn6n6jqsvopy" path="res://Assets/icon/circularProgressBarfull.png" id="4_j1s3i"]
[ext_resource type="Texture2D" uid="uid://deb1x250uy8b5" path="res://Assets/icon/GrowBaground.png" id="5_5va8u"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uo7pq"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.46
spread = 180.0
initial_velocity_min = 139.54
initial_velocity_max = 255.81
orbit_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 5.0

[node name="Vegetable" type="TextureRect"]
show_behind_parent = true
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(15, 15)
script = ExtResource("1_vjb0w")

[node name="SproutTexture" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_r3qm1")

[node name="VegetableTexture" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.8, 0.8)

[node name="DragButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.95137, 0.951091)
action_mode = 0

[node name="GrowthProgressBar" type="TextureProgressBar" parent="."]
z_index = 2
layout_mode = 0
offset_left = -14.0
offset_top = -14.0
offset_right = 26.0
offset_bottom = 26.0
scale = Vector2(0.7, 0.7)
value = 28.0
fill_mode = 4
texture_over = ExtResource("3_y7d0n")
texture_progress = ExtResource("4_j1s3i")

[node name="bulle" type="TextureRect" parent="GrowthProgressBar"]
z_index = -1
layout_mode = 0
offset_left = -4.28571
offset_top = -4.28571
offset_right = 35.7143
offset_bottom = 35.7143
texture = ExtResource("5_5va8u")

[node name="VegetableIcon" type="TextureRect" parent="GrowthProgressBar"]
layout_mode = 0
offset_left = 7.14286
offset_top = 7.14286
offset_right = 47.1429
offset_bottom = 47.1429
scale = Vector2(0.46, 0.46)

[node name="DragTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Particule" type="Node" parent="."]

[node name="PlantedParticule" type="GPUParticles2D" parent="Particule"]
modulate = Color(0.333333, 0.133333, 0, 1)
position = Vector2(15, 16)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_uo7pq")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="pressed" from="DragButton" to="." method="_on_drag_button_pressed"]
